# vocca

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  NOTES.md  README.md  SECURITY.md  mypy.ini  pyproject.toml  ruff.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  release.yml
benchmarks/: bench_generate.py
configs/: default.yaml  expressive.yaml
docs/: api-reference.md  architecture.md  design-notes.md  design.md  usage.md
examples/: README.md  control_matrix.py  prompt_tags.py  quickstart.py  streaming_demo.py
scripts/: export_weights.py  release.sh
tests/: conftest.py  test_attention.py  test_audio.py  test_cli.py  test_codec.py  test_config.py  test_control_encoder.py  test_control_presets.py  test_control_prompt.py  test_control_spec.py  test_generate.py  test_guidance.py  test_layers.py  test_lm.py  test_pipeline.py  test_registry.py  test_sampling.py  test_streaming.py  test_tokenizer.py  test_torch_backend.py  test_transformer.py  test_types.py  test_utils.py  test_version.py  test_weights.py
vocca/: __init__.py  audio.py  cli.py  config.py  exceptions.py  guidance.py  pipeline.py  registry.py  sampling.py  types.py  utils.py  version.py
vocca/codec/: __init__.py  base.py  griffin.py  mock.py  oscillator.py
vocca/control/: __init__.py  _draft.py  encoder.py  presets.py  prompt.py  spec.py
vocca/generate/: __init__.py  decode.py  generator.py  loop.py  streaming.py
vocca/integrations/: __init__.py  torch_backend.py
vocca/model/: __init__.py  attention.py  layers.py  lm.py  transformer.py  weights.py
vocca/text/: __init__.py  tokenizer.py
